syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";


message UpdateCountRequest {
  int64 count = 1;
}


service PushService {
  rpc UpdateCount(UpdateCountRequest) returns(google.protobuf.Empty);
}